--- a/.gatorconfig.json
+++ b/.gatorconfig.json
@@ -1,3 +1,3 @@
 {
-  "db_url": "postgres://postgres:postgres@localhost:5432/database?sslmode=disable"
+  "db_url": "postgres://postgres:postgres@localhost:5432/gator?sslmode=disable"
 }
